# dental_vision

./: .gitignore  MANIFEST.in  package.json  pyproject.toml  requirements.txt  setup.py
dental_vision/: hooks.py  install.py  modules.txt  patches.txt
dental_vision/api/: appointment.py  odontogram.py
dental_vision/billing/: auto_billing.py  insurance.py  statements.py
dental_vision/clinical/: odontogram.py  patient_setup.py  procedures.py  treatment_plan.py
dental_vision/dental_vision/doctype/appointment/: appointment.json  appointment.py
dental_vision/dental_vision/doctype/claim_procedure/: claim_procedure.json  claim_procedure.py
dental_vision/dental_vision/doctype/dental_encounter/: dental_encounter.json  dental_encounter.py
dental_vision/dental_vision/doctype/dental_image_category/: dental_image_category.json  dental_image_category.py
dental_vision/dental_vision/doctype/dental_lab_case/: dental_lab_case.json  dental_lab_case.py
dental_vision/dental_vision/doctype/dental_operatory/: dental_operatory.json  dental_operatory.py
dental_vision/dental_vision/doctype/dental_perio_exam/: dental_perio_exam.json  dental_perio_exam.py
dental_vision/dental_vision/www/: hayat-dental.html  hayat-dental.py
dental_vision/public/css/: hayat_dental.css
dental_vision/public/js/: dental_vision.bundle.js
dental_vision/react_src/: Odontogram.jsx
dental_vision/reports/: weekly_summary.py
dental_vision/scheduling/: recalls.py  reminders.py
dental_vision/workspace/: dental_vision.json
dental_vision/www/: hayat_dental_home.html  hayat_dental_home.py
(+20 files in other folders)
